<resources>
    <string name="app_name">Health 4 The World Stroke</string>
    <string name="general_info">General Information</string>
    <string name="help_me_speak">Help me speak</string>
    <string name="video">Exercises</string>
    <string name="learn">Learn</string>
    <string name="reminders">Reminders</string>
    <string name="quote"> \“The sun himself is weak when he first rises, and gathers strength and courage as the day gets on.\”\n\n - Charles Dickens </string>
    <string name="author">- Charles Dickens</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="read_tab">READ</string>
    <string name="video_tab">VIDEO</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thanks">Thank you</string>
    <string name="bathroom">I need a bathroom</string>
    <string name="water">I need water</string>
    <string name="hungry">I\'m hungry</string>
    <string name="notgivingup">I\'m not giving up</string>
    <string name="pain">I\'m in pain</string>
    <string name="cantspeak">Sorry, I can\'t speak</string>

    <string name="hms_search_placeholder">I\'m hungry</string>

    <string name="todays_reminders">Today\'s Reminders</string>
    <string name="all_reminders">All Reminders</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="save">Save</string>

    <string name="create_reminder_title_header">Remind me to...</string>
    <string name="create_reminder_title_placeholder">Take my medicine</string>
    <string name="create_reminder_frequency_header">How often?</string>
    <string name="create_reminder_pick_time_header">At what time(s)?</string>
    <string name="create_reminder_button_text">Create Reminder</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="custom">Custom</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>

    <string name="sunday_plural">Sundays</string>
    <string name="monday_plural">Mondays</string>
    <string name="tuesday_plural">Tuesdays</string>
    <string name="wednesday_plural">Wednesdays</string>
    <string name="thursday_plural">Thursdays</string>
    <string name="friday_plural">Fridays</string>
    <string name="saturday_plural">Saturdays</string>

    <string name="delete_reminder_message">Are you sure you want to delete this reminder?</string>
    <string name="delete_reminder_title">Delete Reminder</string>

    <string name="heart_rate_content">Atrial Fibrillation or irregular heart rate is a risk factor for stroke. \n\n If you have suspicion for irregular heart rate, contact your doctor immediately for testing including electrocardiogram (ECG/EKG).\n\n Based on past medical history and risk for having a future stroke, there are several options for medications like anticoagulants in order to manage AFib.
        </string>
    <string name="blood_sugar_content">BLOOD SUGAR CONTENT</string>
    <string name="exercises_content">EXERCISES CONTENT</string>
    <string name="diet_content">DIET CONTENT</string>
    <string name="bath_content">BATH CONTENT </string>
    <string name="bladder_bowel_content">BLADDER BOWEL CONTENT</string>
    <string name="home_mod_content">HOME MOD CONTENT</string>
    <string name="faq_content">FAQ CONTENT</string>

    <string name="info_title">Info</string>

    <string name="pref_previously_started">previously_started</string>
    <string name="accept">I Accept</string>
    <string name="title_activity_learn_content">LearnContent</string>
    <string name="title_activity_new_read_learn_content">NewReadLearnContentActivity</string>
</resources>
