<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!--First button-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <TextView
            android:id="@+id/quote"
            android:text="@string/quote"
            android:fontFamily="sans-serif-light"
            android:textSize="24dp"
            android:gravity="right"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp">
        </TextView>
        <TextView
            android:text="@string/author"
            android:fontFamily="sans-serif-light"
            android:textSize="24dp"
            android:gravity="right"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/quote">
        </TextView>
    </RelativeLayout>

    <!--First button-->
    <RelativeLayout
        android:clickable="true"
        android:onClick="helpMeSpeakSelected"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <View android:id="@+id/green_bar"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:background="@color/green"
            android:visibility="visible"/>
        <TextView
            android:text="@string/help_me_speak"
            android:fontFamily="sans-serif-light"
            android:textSize="28dp"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/green_bar"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"></TextView>
    </RelativeLayout>

    <!--Second button-->
    <RelativeLayout
        android:clickable="true"
        android:onClick="learnSelected"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <View android:id="@+id/orange_bar"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:background="@color/orange"
            android:visibility="visible" />
        <TextView
            android:text="@string/learn"
            android:fontFamily="sans-serif-light"
            android:textSize="28dp"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/orange_bar"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"></TextView>
    </RelativeLayout>

    <!--Third button-->
    <RelativeLayout
        android:clickable="true"
        android:onClick="remindersSelected"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <View android:id="@+id/pink_bar"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:background="@color/pink"
            android:visibility="visible"/>
        <TextView
            android:text="@string/reminders"
            android:fontFamily="sans-serif-light"
            android:textSize="28dp"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/pink_bar"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"></TextView>
    </RelativeLayout>
</LinearLayout>