<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rachel.health4theworldstroke.Activities.CreateReminderActivity">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        style="@style/ToolBarStyle"
        android:id="@+id/create_reminder_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:layout_editor_absoluteX="8dp" >

        <TextView
            android:theme="@style/ToolBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_reminder"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <!--Reminder title-->
    <TextView
        android:id="@+id/title_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gray"
        android:layout_below="@id/create_reminder_toolbar"
        android:text="@string/create_reminder_title_header"
        android:textColor="@color/darkestGray"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        />
    <RelativeLayout
        android:id="@+id/title_creator"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/title_header"
        android:background="@color/colorWhite">
        <EditText
            android:theme="@style/AppTheme"
            android:id="@+id/title_creator_edit_text"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/create_reminder_title_placeholder"
            android:textColorHint="@color/medGray"
            android:paddingLeft="20dp"
            android:textSize="25sp"
            android:textColor="@color/red"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/medGray"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            />
        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/x_icon"
            android:visibility="invisible"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"/>
    </RelativeLayout>

    <!--Reminder frequency-->
    <LinearLayout
        android:id="@+id/frequency_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_below="@id/title_creator">
        <!--Daily Tab-->
        <LinearLayout
            android:id="@+id/daily_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/daily_tab_top"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/daily"
                android:textColor="@color/red"
                android:textSize="8pt"
                android:gravity="center"
                android:onClick="clickDailyTab"
                android:clickable="true"
                android:background="@color/gray"/>
            <View
                android:id="@+id/daily_tab_red_bottom"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"/>
        </LinearLayout>
        <!--Weekly Tab-->
        <LinearLayout
            android:id="@+id/weekly_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/weekly_tab_top"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/weekly"
                android:textColor="@color/red"
                android:textSize="8pt"
                android:gravity="center"
                android:onClick="clickWeeklyTab"
                android:clickable="true"
                android:background="@color/gray"/>
            <View
                android:id="@+id/weekly_tab_red_bottom"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"/>
        </LinearLayout>
        <!--Custom tab-->
        <LinearLayout
            android:id="@+id/custom_tab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/custom_tab_top"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/custom"
                android:textColor="@color/red"
                android:textSize="8pt"
                android:gravity="center"
                android:onClick="clickCustomTab"
                android:clickable="true"
                android:background="@color/gray"/>
            <View
                android:id="@+id/custom_tab_red_bottom"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>

    <!--Reminder time-->

    <!--Create Reminder Button-->
    <Button
        android:id="@+id/create_reminder_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="Roboto-Light.tff"
        android:textSize="12pt"
        android:layout_below="@id/frequency_creator"
        android:text="@string/create_reminder"
        />
</RelativeLayout>
